Replace usages of .collect(Collectors.toList()) with Java 16's .toList()
This changes the semantic of the modified code as the original version
produces ArrayList instances whereas the new method returns immutable collection.
This doesn't seem to be a problem as there're no attempts to modify creted lists.